# ac-rennes-eple-filter

./: .gitignore  README.md  ac_rennes_eple_filter.py  ac_rennes_eple_filter_export.py  common.py  database.py  database.yml  database_updater.py  dns-test.py  domain_checker.py  expected_results.json  export.py  html_renderer.py  pattern_searcher.py  policy.py  policy.yml  policy_controller.py  proxy.py  proxy.yml  pyproject.toml  requirements.txt  web_client.py
docs/: check-1.7.1-credit-agricole.fr-20240122.html  control-1.7.1-CLG-79.95.87.134-20240122-system.html  control-1.7.1-PER-195.221.66.155-20240122-system.html  policy-1.7.1.html  search-1.7.1-agricole-20240122.html
docs/src/: filter.pptx
export-data/: proxy.yml
templates/: base.html  check.html  check_rules.html  control.html  control_domains.html  generate_logo_css.py  logo.css  policy.html  report.html  search.html
