[build-system]
requires = ["setuptools >= 75.5.0", ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "ac-rennes-eple-filter"
description = "Une application de contrôle de la mise en oeuvre du filtrage académique dans l'Académie de Rennes"
requires-python = ">=3.12.0"
version = "1.9.7"

authors = [
  {name = "Pascal Aubry", email = "pascal.aubry@ac-rennes.fr"},
]
dependencies = [
  "Django",
  "PyYAML",
  "PyPAC",
  "chardet",
  "colorama",
  "dnspython",
  "matplotlib",
  "requests",
  "python-whois",
]

[project.optional-dependencies]
export = [
  "PyInstaller",
]
